adding alt text

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                     <h2 class="text-uppercase">Clubs</h2>
                                     <p class="item-intro text-muted">There's no shortage of memorable night outs in Manchester</p>
                                     <p>Manchester is a well known city within the UK for the vast variety of night outs and clubbing in general. There is no shortage for the diversity of events, from indie cheesy clubs to hard hitting drum and bass raves. </p>
-                                    <img class="img-fluid d-block mx-auto w-50" src="assets/img/dark-club-photo-cropped.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto w-50" src="assets/img/dark-club-photo-cropped.jpg" alt="Photo taken on the dance floor of a club where people are dancing and looking ahead with disco balls hanging from the cieling and blue lighting" />
                                     <ul class="list-inline">
                                       
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -213,7 +213,7 @@
                                     <h2 class="text-uppercase">Bars</h2>
                                     <p class="item-intro text-muted">From fine dining establishments to student bars</p>
                                     <p>From new bars opening monthly, you will never get bored of the different ranges of cocktails and drinks to experience. Within the town centre you will find a broad range of different bars which can accommodate any budget. </p>
-                                    <img class="img-fluid d-block mx-auto w-50" src="assets/img/bar-photo-cropped.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto w-50" src="assets/img/bar-photo-cropped.jpg" alt="Photo of behind a bar with a cash machine and glasses placed behind the bar" />
                                     <ul class="list-inline">
                                         
                                     </ul>
@@ -241,7 +241,7 @@
                                     <h2 class="text-uppercase">Food</h2>
                                     <p class="item-intro text-muted">The restaurant scene in Manchester is broad, lively, and ever-changing.</p>
                                     <p>With a seemingly constant stream of arrivals and departures, Manchester's restaurant sector is never able to stand still for very long. From Michelin-star restaurants, to family run establishments there will be a restaurant for everyone’s pallet </p>
-                                    <img class="img-fluid d-block mx-auto w-50" src="assets/img/food-photo-three.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto w-50" src="assets/img/food-photo-three.jpg" alt="Photo of pancakes with pieces of orange, blueberries and choclate spreat across the table" />
                                     <ul class="list-inline">
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -268,7 +268,7 @@
                                     <h2 class="text-uppercase">About</h2>
                                     <p class="item-intro text-muted">About us</p>
                                     <p>This website is dedicated to help students who are new to Manchester or students just looking for some new experiences. Manchester is a beautiful city with a lot of great things going on, we’re going to make sure you won’t miss any of it. </p>
-                                    <img class="img-fluid d-block mx-auto w-50" src="assets/img/tram-photo.gif" alt="..." />
+                                    <img class="img-fluid d-block mx-auto w-50" src="assets/img/tram-photo.gif" alt="Photo of a tram heading towards manchester airport" />
                                     <ul class="list-inline">
                                         <li>
                                             <strong></strong>
