--- a/page-four.html
+++ b/page-four.html
@@ -54,11 +54,9 @@
       <div class="col-lg-8 col-md-10 mx-auto">
         <div>
           <h1>About The Life Guide, Manchester</h1>
-          <h5>Problems look mighty small from 150 miles up</h5>
+          <h5></h5>
           <br>
-          <span class="meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on August 24, 2019</span>
+          
         </div>
       </div>
     </div>
@@ -69,26 +67,23 @@
   <div class="container mt-3">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
-        <h2 class="section-heading">The Final Frontier</h2>
+        <p>My name is Karan, the creator of this website, I am a full-time student currently at Manchester Metropolitan University studying Web and UX design. I had noticed that there isn’t much information about student living in Manchester, my goal was to help students become comfortable and independent with moving to university.</p>
+        <h2 class="section-heading"></h2>
 
-        <blockquote class="blockquote">The dreams of yesterday are the hopes of today and the reality of tomorrow. Science has not yet mastered prophecy. We predict too much for the next year and yet far too little for the next ten.</blockquote>
+        <blockquote class="blockquote"></blockquote>
 
-        <p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men. It is a historical process which mankind is carrying out in accordance with the natural laws of human development.</p>
+        <p>Since I am a student within Manchester and have been living here near enough my whole life, I am a reputable and trustworthy source for this type of information. </p>
 
-        <h2 class="section-heading">Reaching for the Stars</h2>
+        <p>This website was created to help students find the best locations for food, bars and clubs around the Manchester area without breaking the bank. The locations have been carefully selected to fit everyone’s needs, from cheap and fun locations to places which are more expensive with a more professional atmosphere. </p>
 
-        <img class="img-fluid" src="https://source.unsplash.com/E0AHdsENmDg" alt="">
+       <p>You can get into contact with me to find out more information via email (karan1313@outlook.com) or phone (07808028219). </p>
+        <h2 class="section-heading"></h2>
+
+        <img class="img-fluid" src="assets/img/tram-photo.gif" alt="">
 
         <p></p>
 
-        <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
-
-        <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth to our nature, Man must explore, and this is exploration at its greatest.</p>
-
-        <p>Placeholder text by
-          <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by
-          <a href="https://unsplash.com/photos/E0AHdsENmDg">Jeremy Thomas on Unsplash</a>.</p>
+        
       </div>
     </div>
   </div>
